test/objects/ManOMan__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ManOMan</label>
    <nameField>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ManOMans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>